--- a/about.html
+++ b/about.html
@@ -28,9 +28,7 @@
     href="https://fonts.googleapis.com/css2?family=Catamaran:wght@600;700;800;900&family=Rubik:wght@400;500;800&display=swap"
     rel="stylesheet">
 
-  <!-- 
-    - preload images
-  -->
+  <!--- preload images -->
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
   <link rel="preload" as="image" href="./assets/images/hero-circle-one.png">
   <link rel="preload" as="image" href="./assets/images/hero-circle-two.png">
@@ -39,9 +37,7 @@
 </head>
 
 <body id="top">
-  <!-- 
-    - #HEADER
-  -->
+  <!--- #HEADER-->
   <header class="header" data-header>
     <div class="container">
       <a href="fitness.html" class="logo">
@@ -84,9 +80,7 @@
 
   <main>
     <article>
-      <!-- 
-        - #HERO
-      -->
+      <!--- #HERO-->
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
         style="background-image: url('./assets/images/hero-bg.png')">
         <div class="container">
@@ -118,19 +112,9 @@
         </div>
       </section>
 
-      <!-- 
-        - #ABOUT
-      -->
+      <!--- #ABOUT-->
 
-
-
-    
-
-      <!-- 
-        - #VIDEO
-      -->
-
-      <section class="section video" aria-label="video">
+      <!-- <section class="section video" aria-label="video">
         <div class="container">
 
           <div class="video-card has-before has-bg-image"
@@ -147,208 +131,11 @@
           </div>
 
         </div>
-      </section>
+      </section> -->
 
+      
 
 
-
-
-      <!-- 
-        - #CLASS
-      -->
-
-      <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
-        <div class="container">
-
-          <p class="section-subtitle">Our Classes</p>
-
-          <h2 class="h2 section-title text-center">Fitness Classes For Every Goal</h2>
-
-          <ul class="class-list has-scrollbar">
-
-            <li class="scrollbar-item">
-              <div class="class-card">
-
-                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-1.jpg" width="416" height="240" loading="lazy" alt="Weight Lifting"
-                    class="img-cover">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-1.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
-                    <h3 class="h3">
-                      <a href="#" class="card-title">Weight Lifting</a>
-                    </h3>
-                  </div>
-
-                  <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
-                  </p>
-
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">85%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 85%"></div>
-                    </div>
-
-                  </div>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="class-card">
-
-                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-2.jpg" width="416" height="240" loading="lazy" alt="Cardio & Strenght"
-                    class="img-cover">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-2.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
-                    <h3 class="h3">
-                      <a href="#" class="card-title">Cardio & Strenght</a>
-                    </h3>
-                  </div>
-
-                  <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
-                  </p>
-
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">70%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-
-                  </div>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="class-card">
-
-                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-3.jpg" width="416" height="240" loading="lazy" alt="Power Yoga"
-                    class="img-cover">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-3.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
-                    <h3 class="h3">
-                      <a href="#" class="card-title">Power Yoga</a>
-                    </h3>
-                  </div>
-
-                  <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
-                  </p>
-
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">90%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 90%"></div>
-                    </div>
-
-                  </div>
-
-                </div>
-
-              </div>
-            </li>
-
-            <li class="scrollbar-item">
-              <div class="class-card">
-
-                <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/class-4.jpg" width="416" height="240" loading="lazy" alt="The Fitness Pack"
-                    class="img-cover">
-                </figure>
-
-                <div class="card-content">
-
-                  <div class="title-wrapper">
-                    <img src="./assets/images/class-icon-4.png" width="52" height="52" aria-hidden="true" alt=""
-                      class="title-icon">
-
-                    <h3 class="h3">
-                      <a href="#" class="card-title">The Fitness Pack</a>
-                    </h3>
-                  </div>
-
-                  <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
-                  </p>
-
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">60%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 60%"></div>
-                    </div>
-
-                  </div>
-
-                </div>
-
-              </div>
-            </li>
-
-          </ul>
-
-        </div>
-      </section>
-
-
-
-
-
-      <!-- 
-        - #BLOG
-      -->
-
-      <section class="section blog" id="blog" aria-label="blog">
         <div class="container">
 
           <p class="section-subtitle">Our News</p>
@@ -444,14 +231,11 @@
           </ul>
 
         </div>
-      </section>
-
+      </section> 
     </article>
   </main>
 
-  <!-- 
-    - #FOOTER
-  -->
+  <!--- #FOOTER-->
 
   <footer class="footer">
 
@@ -611,30 +395,20 @@
     </div>
   </footer>
 
-  <!-- 
-    - #BACK TO TOP
-  -->
+  <!--- #BACK TO TOP-->
 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
   </a>
 
-
-
-
-
-  <!-- 
-    - custom js link
-  -->
+  <!--- custom js link-->
   <script src="./assets/js/script.js" defer></script>
 
   <!-- tripadvisor review link -->
   <script async src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=612&amp;locationId=12631041&amp;lang=en_US&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2" data-loadtrk onload="this.loadtrk=true"></script>
 
 
-  <!-- 
-    - ionicon link
-  -->
+  <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
