update icons and navlinks

--- a/fitness.html
+++ b/fitness.html
@@ -44,9 +44,9 @@
   -->
   <header class="header" data-header>
     <div class="container">
-      <a href="#" class="logo">
-        <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
-        <span class="span active">F.I.T</span>
+      <a href="treatments.html" class="logo">
+        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <span class="span">Treatments</span>
       </a>
 
       <nav class="navbar" data-navbar>
@@ -62,7 +62,11 @@
             <a href="about.html" class="navbar-link" data-nav-link>About</a>
           </li>
           <li>
-            <a href="treatments.html" class="navbar-link" data-nav-link>Treatments</a>
+            <a href="fitness.html" class="logo navbar-link active" data-nav-link>
+            <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
+
+            <span class="span">F.I.T</span>
+            </a>
           </li>
           <li>
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
@@ -625,7 +629,6 @@
           <li>
             <div id="TA_selfserveprop612" class="TA_selfserveprop"><ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4"><li id="uUooLc" class="a6i5suQ8"><a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html"><img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/></a></li></ul></div>
           </li>
-
         </ul>
       </div>
     </div>
@@ -674,9 +677,6 @@
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
   </a>
-
-
-
 
 
   <!-- 
