--- a/about.html
+++ b/about.html
@@ -40,9 +40,9 @@
   <!--- #HEADER-->
   <header class="header" data-header>
     <div class="container">
-      <a href="fitness.html" class="logo">
-        <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
-        <span class="span">F.I.T</span>
+      <a href="treatments.html" class="logo">
+        <img src="./assets/images/class-yoga-massage.png" alt="">
+        <span class="span">Treatments</span>
       </a>
 
       <nav class="navbar" data-navbar>
@@ -58,7 +58,11 @@
             <a href="about.html" class="navbar-link active" data-nav-link>About</a>
           </li>
           <li>
-            <a href="treatments.html" class="navbar-link" data-nav-link>Treatments</a>
+            <a href="fitness.html" class="logo navbar-link" data-nav-link>
+            <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
+
+            <span class="span">F.I.T</span>
+            </a> 
           </li>
           <li>
             <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
@@ -244,7 +248,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">
+          <a href="fitness.html" class="logo">
             <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
             <span class="span">F.I.T</span>
