--- a/contact.html
+++ b/contact.html
@@ -88,9 +88,7 @@
 
   <main>
     <article>
-      <!-- 
-        - #HERO
-      -->
+      <!--- #HERO-->
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section>
         <div class="container">
           <div class="hero-content">
@@ -158,9 +156,7 @@
     </article>
   </main>
 
-<!-- 
-    - #FOOTER
-  -->
+<!--- #FOOTER-->
 
   <footer class="footer">
 
@@ -222,11 +218,11 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Blog</a>
+            <a href="blog.html" class="footer-link">Blog</a>
           </li>
 
           <li>
-            <a href="contact.html" class="footer-link">Contact Us</a>
+            <a href="#top" class="footer-link">Contact Us</a>
           </li>
 
         </ul>
@@ -320,17 +316,13 @@
     </div>
   </footer>
 
-  <!-- 
-    - #BACK TO TOP
-  -->
+  <!--- #BACK TO TOP-->
 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
   </a>
 
-  <!-- 
-    - custom js link
-  -->
+  <!--- custom js link-->
   <script src="./assets/js/script.js" defer></script>
 
   <!-- tripadvisor review link -->
@@ -339,9 +331,7 @@
   <!-- Google review link -->
   <script src="https://static.elfsight.com/platform/platform.js" async></script>
 
-  <!-- 
-    - ionicon link, 
-  -->
+  <!--- ionicon link-->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
