--- a/fitness.html
+++ b/fitness.html
@@ -210,20 +210,14 @@
       </section>
 
 
-
-
-
-      <!-- 
-        - #CLASS
-      -->
-
+<!--- #CLASS -->
       <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
 
-          <p class="section-subtitle">Our Classes</p>
+          <p class="section-subtitle">Look Great Feel Better </p>
 
-          <h2 class="h2 section-title text-center">Fitness Classes For Every Goal</h2>
+          <h2 class="h2 section-title text-center">Fitness Benefits and Lifestyle Tips</h2>
 
           <ul class="class-list has-scrollbar">
 
@@ -246,26 +240,14 @@
                     </h3>
                   </div>
 
-                  <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
-                  </p>
-
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">85%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 85%"></div>
-                    </div>
-
-                  </div>
-
+                  <p class="card-text">Benefits:</p>
+                  <ul class="card-text">
+                    <li>🏋🏻‍♀️ Builds Muscle Strength: Improves overall body strength and endurance.</li>
+                    <li>🔥 Burns Calories: Boosts metabolism and helps with weight loss.</li>
+                    <li>💪🏻 Enhances Bone Density: Helps prevent osteoporosis and strengthens bones.</li>
+                    <li>🧠 Reduces Stress: Releases endorphins and enhances mental well-being.</li>  
+                  </ul>
                 </div>
-
               </div>
             </li>
 
@@ -289,25 +271,16 @@
                   </div>
 
                   <p class="card-text">
-                    Suspendisse nisi libero, cursus ac magna sit amet, fermentum imperdiet nisi.
+                    Benefits:
                   </p>
+                  <ul class="card-text">
+                    <li>🩷 Boosts Heart Health: Improves cardiovascular endurance and lowers the risk of heart disease.</li>
+                    <li>🔥 Burns Calories: Effective for weight management and fat loss.</li>
+                    <li>💪🏻 Supports Muscle Tone: Combines fat-burning and muscle-building benefits.</li>
+                    <li>🧠 Enhances Mental Focus: Cardio releases dopamine, reducing anxiety and improving mood.</li>
 
-                  <div class="card-progress">
-
-                    <div class="progress-wrapper">
-                      <p class="progress-label">Class Full</p>
-
-                      <span class="progress-value">70%</span>
-                    </div>
-
-                    <div class="progress-bg">
-                      <div class="progress-bar" style="width: 70%"></div>
-                    </div>
-
-                  </div>
-
+                  </ul>
                 </div>
-
               </div>
             </li>
 
@@ -399,14 +372,9 @@
 
         </div>
       </section>
-
-
-
-
-
-      <!-- 
-        - #BLOG
-      -->
+      <!-- /*************************/ -->
+       
+      <!--- #BLOG-->
 
       <section class="section blog" id="blog" aria-label="blog">
         <div class="container">
@@ -509,9 +477,7 @@
     </article>
   </main>
 
-<!-- 
-    - #FOOTER
-  -->
+<!--- #FOOTER-->
 
   <footer class="footer">
 
@@ -520,7 +486,7 @@
 
         <div class="footer-brand">
 
-          <a href="#" class="logo">
+          <a href="fitness.html" class="logo">
             <ion-icon name="barbell-sharp" aria-hidden="true"></ion-icon>
 
             <span class="span">F.I.T</span>
@@ -573,7 +539,7 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Blog</a>
+            <a href="blog.html" class="footer-link">Blog</a>
           </li>
 
           <li>
@@ -620,16 +586,7 @@
             </div>
           </li>
         </ul>
-
-        <ul class="footer-list">
-          <li>
-            <p class="footer-list-title has-before">Tripadvisor Ranking</p>
-          </li>
-
-          <li>
-            <div id="TA_selfserveprop612" class="TA_selfserveprop"><ul id="BW5Fht7U4K3" class="TA_links R7tpLWkA4"><li id="uUooLc" class="a6i5suQ8"><a target="_blank" href="https://www.tripadvisor.com/Attraction_Review-g189852-d12631041-Reviews-Let_s_Relax_Stockholm-Stockholm.html"><img src="https://www.tripadvisor.com/img/cdsi/img2/branding/v2/Tripadvisor_lockup_horizontal_secondary_registered-11900-2.svg" alt="TripAdvisor"/></a></li></ul></div>
-          </li>
-        </ul>
+  
       </div>
     </div>
 
@@ -670,9 +627,7 @@
     </div>
   </footer>
 
-  <!-- 
-    - #BACK TO TOP
-  -->
+  <!--- #BACK TO TOP-->
 
   <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
     <ion-icon name="caret-up-sharp" aria-hidden="true"></ion-icon>
