--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ A soothing massage melts away stress, relieves muscle tension, and improves circ
           </li>
 
           <li>
-            <a href="index.html" class="footer-link">Home</a>
+            <a href="#top" class="footer-link">Home</a>
           </li>
 
           <li>
@@ -585,7 +585,7 @@ A soothing massage melts away stress, relieves muscle tension, and improves circ
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Blog</a>
+            <a href="blog.html" class="footer-link">Blog</a>
           </li>
 
           <li>
