--- a/treatments.html
+++ b/treatments.html
@@ -333,11 +333,11 @@
           </li>
 
           <li>
-            <a href="treatments.html" class="footer-link">Let's Relax</a>
+            <a href="#top" class="footer-link">Let's Relax</a>
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Blog</a>
+            <a href="blog.html" class="footer-link">Blog</a>
           </li>
 
           <li>
