updated treatments and about pages

--- a/index.html
+++ b/index.html
@@ -519,6 +519,7 @@ A soothing massage melts away stress, relieves muscle tension, and improves circ
         </div>
       </section>
 
+      <!--- #COMMENTS-->
       <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
