--- a/about.html
+++ b/about.html
@@ -136,11 +136,11 @@
         </div>
       </section> -->
 
-     <section class="section class bg-dark has-bg-image" id="class" aria-label="class"
+     <section class="section class has-bg-image" id="class" aria-label="class"
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
           <h2 class="h2 section-title text-center">Happy Customers 💆🏻‍♀️</h2>
-          <p>Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
+          <p class="section-subtitle">Thank you for the great reviews 🙏🏻 We're thrilled to hear you enjoyed your massage session. Your satisfaction is our priority! We're delighted you felt relaxed and rejuvenated after your visit.We look forward to welcoming you back soon! </p>
 
           <!-- Google review -->
           <div class="elfsight-app-be61c573-0eba-472e-8a01-a2d0a7a4a160" hight="100px" data-elfsight-app-lazy></div>
