--- a/contact.html
+++ b/contact.html
@@ -98,10 +98,13 @@
             </p>
             
             <P class="hero-subtitle">Operating Hours:</P>
-            <p class="section-text">Monday - Saturday  : 10.00 - 18.00 </p>
+            <p class="section-text">Monday - Friday  : 09.00 - 20.00 </p>
+            <p class="section-text">Saturday - Sunday : 10.00 - 18.00</p>
 
-            <P class="hero-subtitle">Closed For The Holidays : </P>
-             <p class="section-text">23 Nov - 10 Dec​​</p>
+            <P class="hero-subtitle">Closed For The Holidays 2025 : </P>
+            <p class="section-text">18 April - 21 April</p>
+            <p class="section-text">20 June - 22 June</p>
+            <p class="section-text">23 Dec - 28 Dec​​</p>
              
             <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
           </div>
@@ -135,7 +138,7 @@
           <div class="about-content">
             <img src="./assets/images/treatment-room.webp" alt="">
             <h2 class="h2 section-title">First time 20% off!</h2>
-            <a href="#" class="btn btn-primary">Book Now</a>
+            <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">Book Now</a>
           </div>
       </section>
 
