--- a/fitness.html
+++ b/fitness.html
@@ -143,7 +143,7 @@
             <h2 class="h2 section-title">Fitness and Healthy Lifestyle Tips</h2>
 
             <p class="section-text">
-              Living a fit and healthy lifestyle involves a combination of consistent physical activity, balanced nutrition, and mindful practices.
+              Living a F.I.T 🏋🏻‍♂️ and healthy lifestyle 🥗 involves a combination of consistent physical activity, balanced nutrition, and mindful practices.
             </p>
 
             <p class="section-text">
@@ -160,15 +160,20 @@
                 <div class="container">
                   <h3 class="h3 coach-name">Kunnikar Boonbunlu</h3>
 
-                  <p class="coach-title">Our Coach</p>
+                  <p class="coach-title">Fitness and Nutrition Coach</p>
                 </div>
 
               </div>
 
             </div>
 
-          </div>
-
+          </div>  
+        </div>
+        <br>
+        <br>
+        <div class="container">
+        <img src="./assets/blog/Diet-Nutrition.jpg" alt="Nutrition and Diet certificate">
+        <img src="./assets/blog/Fittness .jpg" alt="fitness certificate">
         </div>
       </section>
 
