--- a/treatments.html
+++ b/treatments.html
@@ -142,7 +142,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/sports.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/sports.webp" width="416" height="240" loading="lazy" alt="Sports Massage"
                     class="img-cover">
                 </figure>
 
@@ -169,7 +169,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -218,7 +218,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/Office syndrome.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/Office syndrome.webp" width="416" height="240" loading="lazy" alt="Office Syndrome"
                     class="img-cover">
                 </figure>
 
@@ -244,7 +244,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -255,7 +255,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/Yoga-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/Yoga-massage.webp" width="416" height="240" loading="lazy" alt="Yoga massage"
                     class="img-cover">
                 </figure>
 
@@ -283,7 +283,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>  
                     </div>
                   </div>
@@ -295,7 +295,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/stretch.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/stretch.webp" width="416" height="240" loading="lazy" alt="Stretch Massage"
                     class="img-cover">
                 </figure>
 
@@ -324,7 +324,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -335,7 +335,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/back&foot-massage.webp" width="416" height="240" loading="lazy" alt="Back & Foot Massage"
                     class="img-cover">
                 </figure>
 
@@ -362,7 +362,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -373,7 +373,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/hotoil.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/hotoil.webp" width="416" height="240" loading="lazy" alt="Hot oil Massage"
                     class="img-cover">
                 </figure>
 
@@ -399,7 +399,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -410,7 +410,7 @@
            <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/aromatherapy-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/aromatherapy-massage.webp" width="416" height="240" loading="lazy" alt="Aromatherapy Massage"
                     class="img-cover">
                 </figure>
 
@@ -438,7 +438,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -449,7 +449,7 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/chi-nei-tsang.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/chi-nei-tsang.webp" width="416" height="240" loading="lazy" alt="Chi Nei Tsang"
                     class="img-cover">
                 </figure>
 
@@ -478,7 +478,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
