--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -199,7 +199,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -232,7 +232,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -265,7 +265,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -298,7 +298,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -331,7 +331,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -364,7 +364,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -397,7 +397,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50px" height="50px">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
                       </button>
                     </div>
                   </div>
