--- a/treatments.html
+++ b/treatments.html
@@ -149,7 +149,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Sports Massage</a>
+                      Sports Massage
                     </h3>
                   </div>
 
@@ -169,7 +169,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -180,14 +181,14 @@
             <li class="scrollbar-item">
               <div class="class-card">
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/reflexology-foot-massage.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/reflexology-foot-massage.webp" width="416" height="240" loading="lazy" alt="Reflexology"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Reflexology</a>
+                      Reflexology
                     </h3>
                   </div>
 
@@ -195,8 +196,9 @@
                     Reflexology Massage uses various touch techniques on specific points of the feet works on energy pathways similar to acupuncture to normalize body function, restore energy throughout the body, and maintain optimum health. 
                   </p> 
                   <p class="card-text">
-                    Reflexology focus on your feet with this ancient healing practice that stimulates pressure points to promote balance and relaxation throughout the body.</p> 
-                   <p class="card-text">
+                    Reflexology focus on your feet with this ancient healing practice that stimulates pressure points to promote balance and relaxation throughout the body.
+                  </p> 
+                  <p class="card-text">
                     Ideal for stress relief, relieve pain, lift your mood and give a feeling of overall well-being.   
                   </p>
 
@@ -207,7 +209,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -225,7 +228,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Head, Shoulder and Back (Office Syndrome) </a>
+                      Head, Shoulder and Back (Office Syndrome) 
                     </h3>
                   </div>
 
@@ -244,7 +247,10 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                        Book Now
+                      </a>
                       </button>
                     </div>
                   </div>
@@ -262,7 +268,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Yoga Massage</a>
+                      Yoga Massage
                     </h3>
                   </div>
 
@@ -283,7 +289,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>  
                     </div>
                   </div>
@@ -302,7 +309,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Stretch Massage</a>
+                      Stretch Massage
                     </h3>
                   </div>
 
@@ -324,7 +331,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -342,7 +350,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Back & Foot Massage </a>
+                      Back & Foot Massage 
                     </h3>
                   </div>
 
@@ -362,7 +370,10 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                         <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">
+                         Book Now
+                        </a>
                       </button>
                     </div>
                   </div>
@@ -380,7 +391,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Hot Oil Massage </a>
+                     Hot Oil Massage 
                     </h3>
                   </div>
 
@@ -399,7 +410,7 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -417,7 +428,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Aromatherapy</a>
+                      Aromatherapy
                     </h3>
                   </div>
 
@@ -438,7 +449,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
@@ -456,7 +468,7 @@
                 <div class="card-content">
                   <div class="title-wrapper">
                     <h3 class="h3">
-                      <a href="#" >Chi Nei Tsang (Abdominal)</a>
+                      Chi Nei Tsang (Abdominal)
                     </h3>
                   </div>
 
@@ -478,7 +490,8 @@
                   <div class="card-progress">
                     <div class="progress-wrapper">
                       <button>
-                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary"><img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50">Book Now</a>
+                      <a target="_blank" href="https://boka.se/letsrelaxspa" class="btn btn-primary">
+                        <img src="./assets/images/hero-banner.png" alt="let's relax logo" width="50" heitht="50" style="margin-bottom: 10px;">Book Now</a>
                       </button>
                     </div>
                   </div>
