--- a/contact.html
+++ b/contact.html
@@ -283,7 +283,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2024 F.I.T and Welllness| All Rights Reserved By <a href="#" class="copyright-link">Kunnikar Boonbunlu</a>
+          &copy; 2024 F.I.T and Welllness| All Rights Reserved By <a href="https://github.com/KunnikarB" class="copyright-link">Kunnikar Boonbunlu</a>
         </p>
 
         <ul class="footer-bottom-list">
