--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
           </li>
 
           <li>
-            <a href="blog.html" class="footer-link">Blog</a>
+            <a href="wellness.html" class="footer-link">Wellness</a>
           </li>
 
           <li>
