--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
           </li>
 
           <li>
-            <a href="blog.html" class="footer-link">Blog</a>
+            <a href="wellness.html" class="footer-link">Wellness</a>
           </li>
 
           <li>
