--- a/wellness.html
+++ b/wellness.html
@@ -574,7 +574,7 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Blog</a>
+            <a href="#top" class="footer-link">Wellness</a>
           </li>
 
           <li>
