--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
           </li>
 
           <li>
-            <a href="treatments.html" class="footer-link">Let's Relax</a>
+            <a href="treatments.html" class="footer-link">Treatments</a>
           </li>
 
           <li>
