--- a/treatments.html
+++ b/treatments.html
@@ -811,7 +811,7 @@
           </li>
 
           <li>
-            <a href="#top" class="footer-link">Let's Relax</a>
+            <a href="#top" class="footer-link">Treatments</a>
           </li>
 
           <li>
