--- a/fitness.html
+++ b/fitness.html
@@ -560,7 +560,7 @@
           </li>
 
           <li>
-            <a href="treatments.html" class="footer-link">Let's Relax</a>
+            <a href="treatments.html" class="footer-link">Treatments</a>
           </li>
 
           <li>
