--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
           </li>
 
           <li>
-            <a href="treatments.html" class="footer-link">Let's Relax</a>
+            <a href="treatments.html" class="footer-link">Treatments</a>
           </li>
 
           <li>
