updated links and modified photos

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
             </a> 
           </li>
           <li>
-            <a href="blog.html" class="navbar-link" data-nav-link>Wellness</a>
+            <a href="wellness.html" class="navbar-link" data-nav-link>Wellness</a>
           </li>
           <li>
             <a href="contact.html" class="navbar-link" data-nav-link>Contact</a>
