--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
     <article>
       <!--- #HERO-->
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
-        style="background-image: url('./assets/images/hero-bg.png')">
+        > 
         <div class="container">
           <div class="hero-content">
             <h2 class="hero-subtitle">Your Partner in Wellness and Relaxation</h2>
@@ -117,7 +117,7 @@
       </section>
 
       <!--- #ABOUT-->
-      <!-- <section class="section video" aria-label="video">
+    
         <div class="container">
 
           <div class="video-card has-before has-bg-image"
@@ -134,8 +134,9 @@
           </div>
 
         </div>
-      </section> -->
-
+      </section> 
+      
+     <!-- COMMENTS -->
      <section class="section class has-bg-image" id="class" aria-label="class"
         style="background-image: url('./assets/images/classes-bg.png')">
         <div class="container">
