--- a/fitness.html
+++ b/fitness.html
@@ -109,7 +109,7 @@
           </div>
 
           <div class="hero-banner">
-            <img src="./assets/images/about-banner.jpg" width="660" height="753" alt="hero banner" class="w-100">
+            <img src="./assets/images/about-banner.webp" width="660" height="753" alt="hero banner" class="w-100">
 
             <img src="./assets/images/hero-circle-one.png" width="666" height="666" aria-hidden="true" alt=""
               class="circle circle-1">
@@ -127,7 +127,7 @@
       <section class="section about" id="about" aria-label="about">
         <div class="container">
           <div class="about-banner has-after">
-            <img src="./assets/images/about-banner.png" width="660" height="648" loading="lazy" alt="about banner"
+            <img src="./assets/images/about-banner-yoga.webp" width="660" height="648" loading="lazy" alt="about banner"
               class="w-100">
 
             <img src="./assets/images/about-circle-one.png" width="660" height="534" loading="lazy" aria-hidden="true"
@@ -154,7 +154,7 @@
 
               <div class="about-coach">
                 <figure class="coach-avatar">
-                  <img src="./assets/images/coach.jpeg" width="80" loading="lazy" alt="Trainer">
+                  <img src="./assets/images/coach.webp" width="80" loading="lazy" alt="Trainer">
                 </figure>
 
                 <div class="container">
@@ -179,7 +179,7 @@
 
 <!--- #Blog--->
       <section class="section class bg-dark has-bg-image" id="blog-1" aria-label="class"
-        style="background-image: url('./assets/images/classes-bg.png')">
+        >
         <div class="container">
 
           <p class="section-subtitle">Look Great Feel Better </p>
@@ -192,7 +192,7 @@
               <div class="class-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/weight-lifting.jpg" width="416" height="240" loading="lazy" alt="Weight Lifting"
+                  <img src="./assets/images/weight-lifting.webp" width="416" height="240" loading="lazy" alt="Weight Lifting"
                     class="img-cover">
                 </figure>
 
@@ -225,7 +225,7 @@
               <div class="class-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/cardio-workout.jpg" width="416" height="240" loading="lazy" alt="Cardio & Strenght"
+                  <img src="./assets/images/cardio-workout.webp" width="416" height="240" loading="lazy" alt="Cardio & Strenght"
                     class="img-cover">
                 </figure>
 
@@ -260,7 +260,7 @@
               <div class="class-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/power-yoga.jpg" width="416" height="240" loading="lazy" alt="Power Yoga"
+                  <img src="./assets/images/power-yoga.webp" width="416" height="240" loading="lazy" alt="Power Yoga"
                     class="img-cover">
                 </figure>
 
@@ -296,7 +296,7 @@
               <div class="class-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 240;">
-                  <img src="./assets/images/nutrition.jpg" width="416" height="240" loading="lazy" alt="The Fitness Pack"
+                  <img src="./assets/images/nutrition.webp" width="416" height="240" loading="lazy" alt="The Fitness Pack"
                     class="img-cover">
                 </figure>
 
